workspace(name = "ClickHouse")

# contribs

new_local_repository(
    name = "boost",
    path = "contrib/boost",
    build_file = "contrib/boost-build/BUILD.bazel",
)

new_local_repository(
    name = "cctz",
    path = "contrib/cctz",
    build_file = "contrib/cctz-build/BUILD.bazel",
)

new_local_repository(
    name = "fmt",
    path = "contrib/fmtlib",
    build_file = "contrib/fmtlib-build/BUILD.bazel",
)

new_local_repository(
    name = "poco",
    path = "contrib/poco",
    build_file = "contrib/poco-build/BUILD.bazel",
)

# toolchains

load("//bazel/toolchain:helpers.bzl", "clang_archive")

clang_archive(
    name = "clang-11.0.0-amd64-linux",
    url = "https://commondatastorage.googleapis.com/chromium-browser-clang/Linux_x64/clang-n356902-4e813bbd-1.tgz",
    sha256 = "06028e29a32631c3d7c64b66b22607c6b87494588de017424c613f1bcf804487",
    build_file = "//bazel/toolchain/clang:clang-11.BUILD",
    toolchain_file = "//bazel/toolchain/clang:config.bzl",
)

bind(
    name = "clang-toolchains",
    actual = "@clang-11.0.0-amd64-linux//:toolchains",
)
